--- a/volumes/web-projects/sctiengen.de/sc-tiengen-website/src/SCTiengen/WebSiteBundle/Resources/public/css/main.less.css
+++ b/volumes/web-projects/sctiengen.de/sc-tiengen-website/src/SCTiengen/WebSiteBundle/Resources/public/css/main.less.css
@@ -14,6 +14,10 @@ body {
   body {
     font-size: 14px;
   }
+  .container {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 }
 #page {
   background-image: url("../images/header-banner.png"), url("../images/footer-bg.png");
@@ -25,11 +29,12 @@ body {
   box-shadow: 1px 2px 3px #333;
   padding: 0 15px 50px;
   margin-bottom: 48px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 @media (min-width: 479px) {
   #page {
     margin-left: 28px;
+    margin-top: 20px;
     min-height: 290px;
   }
 }
@@ -153,7 +158,7 @@ body {
   padding: 10px;
   position: absolute;
   top: -68px;
-  width: 402px;
+  width: 403px;
 }
 #page_footer #login-box.open {
   display: block;
@@ -252,11 +257,21 @@ body {
   padding-left: 20px;
   width: 400px;
 }
-.shariff li {
+.shariff .orientation-horizontal li {
   height: 25px;
+  min-width: 30px;
+}
+@media (max-width: 479px) {
+  .shariff {
+    width: 175px;
+  }
+  .shariff .orientation-horizontal li {
+    max-width: 30px;
+  }
 }
 .shariff li a {
   line-height: 25px;
+  top: -3px;
 }
 .jumbotron > *:first-child {
   margin-top: 0;
